--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,25 @@
 {
+  "name": "@bns/icosea",
+  "version": "0.0.11",
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "ICOSEA_FILE=./icons/mat_icon/icon.toml deno run -ERW --watch main.ts"
   },
+  "exports": "./main.ts",
+  "license": "MIT",
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
     "@std/fmt": "jsr:@std/fmt@^1.0.2",
     "@std/fs": "jsr:@std/fs@^1.0.4",
     "@std/path": "jsr:@std/path@^1.0.6",
     "@std/toml": "jsr:@std/toml@^1.0.1"
+  },
+  "publish": {
+    "exclude": [
+      "./**/*.test.ts",
+      "./.vscode/**/*",
+      "./test.ts",
+      "./node_modules/**/*",
+      "./icons/**/*"
+    ]
   }
 }
