--- a/deno.json
+++ b/deno.json
@@ -2,7 +2,7 @@
   "name": "@bns/icosea",
   "version": "0.0.11",
   "tasks": {
-    "dev": "ICOSEA_FILE=./icons/mat_icon/icon.toml deno run -ERW --watch main.ts",
+    "dev": " deno run -ERW --watch main.ts -f=./icons/mat_icon/icon.toml",
     "format": "deno fmt --ignore=./icons ./**/*",
     "lint": "deno lint "
   },
